--- a/Manifest.yml
+++ b/Manifest.yml
@@ -25,6 +25,13 @@ spec:
         name: app-2048
         ports:
         - containerPort: 80
+        resources:                                                       # Specifies resource requests and limits for the container.
+            requests:                                                      # Minimum resources required for the container (512Mi of memory and 500m CPU).
+              memory: "512Mi"
+              cpu: "500m"
+            limits:                                                        # Maximum resources the container can consume (1Gi of memory and 1 CPU).
+              memory: "1Gi"
+              cpu: "1"
 ---
 apiVersion: v1
 kind: Service
