--- a/Manifest.yml
+++ b/Manifest.yml
@@ -43,19 +43,19 @@ spec:
 ---
 # PersistentVolume
 # ----------------------------
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: nginx-pv
-spec:
-  capacity:
-    storage: 1Gi
-  accessModes:
-    - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: standard
-  #hostPath:
-  #  path: /mnt/data/app
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: nginx-pv
+# spec:
+#   capacity:
+#     storage: 1Gi
+#   accessModes:
+#     - ReadWriteOnce
+#   persistentVolumeReclaimPolicy: Retain
+#   storageClassName: standard
+#   hostPath:
+#    path: /mnt/data/app
 ---
 # ----------------------------
 # PersistentVolumeClaim
