--- a/Manifest.yml
+++ b/Manifest.yml
@@ -67,7 +67,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: standard  
+  storageClassName: gp2  
   resources:
     requests:
       storage: 1Gi
