--- a/Manifest.yml
+++ b/Manifest.yml
@@ -32,6 +32,9 @@ spec:
           limits:                                                        # Maximum resources the container can consume (1Gi of memory and 1 CPU).
             memory: "256Mi"
             cpu: "250m"
+        volumeMounts:
+        - name: nginx-log-volume
+          mountPath: /var/log/nginx    
       volumes:                                                            # Defines volumes to be used by the containers.
         # - name: config-volume
         #   configMap:                                                       # Mounts a ConfigMap called nginx-config to provide the Nginx configuration.
